CHANGES
=======

* Fixed tests, still no tests for new additions
* Added more engines
* Added todo

1.0.5
-----

* Added multiple-search-engine searches
* Fixed bot options

1.0.4
-----

* Added token\_file option for dockerizing
* Minor change
* Fixed katbot tests
* Fixed tests
* Added (not working yet) Dockerfile and docker-compose
* Fixed KatBot
* Clean up readme
* Added readme to asciinema
* Pin pytest-sugar to latest version 0.9.0

1.0.2
-----

* Fixed interactive mode

1.0.1
-----

* 100% code coverage
* Wrong version in changelog

1.0.0
-----

* Added changelog
* Added logging
* Fixes on docopt parsing
* Readme update
* Updated readme

0.5
---

* Added a few tests
* Refactor, fixed almost all tests
* Readme accuracy
* Cleaner readme
* Readme updated with new usage
* Changed readme image and added shortener to bot
* Shortmag.net use
* Update inquirer from 2.1.11 to 2.2.0
* Fixed tests
* updated\_requirements
* Not removing parts of the magnet link
* Added url shortener
* Pin flake8\_docstrings to latest version 1.1.0
* Pin flake8 to latest version 3.4.1
* Pin pylint to latest version 1.7.2
* Pin pytest-cov to latest version 2.5.1
* Pin pytest-flake8 to latest version 0.8.1
* Pin pytest to latest version 3.2.1
* Pin torrentmirror to latest version 0.0.1.dev5
* Pin robobrowser to latest version 0.5.3
* Pin telepot to latest version 12.3
* Pin inquirer to latest version 2.1.11
* Pin tabulate to latest version 0.7.7
* Pin requests to latest version 2.18.4
* Pin docopt to latest version 0.6.2

0.3.0
-----

* Added bot tests
* Initial bot tests

0.2.3
-----

* updated readme
* Fixed coveralls
* Changed readme
* Changed readme
* Added coveralls
* Fixed pypy badge
* Added badges

0.2.2
-----

* Fixed travis
* Added \_\_init\_\_.py to make pytest-cov work
* Added python setup.py test
* Fixed cov report on tox
* Added magnet shortener
* Limited searches at one per-user

0.2.1
-----

* 100% coverage on \_\_init\_\_. B Bot still pending
* Added more tests