@@ -1,6 +1,12 @@
 CHANGES
 =======
 
+* Segmented tests
+* Fixed tests
+* Fixed tests?
+* Updated usage
+* Fixed last commit
+* Moved asciicast to gif
 * Fixed tests, still no tests for new additions
 * Added more engines
 * Added todo
